Fix mobile alignment of support/oppose and stats
Issue #785

--- a/public/sass/pages/_document.scss
+++ b/public/sass/pages/_document.scss
@@ -109,6 +109,7 @@
 
     .stats-number {
         @extend .col-md-8;
+        @extend .col-xs-8;
     }
 }
 
@@ -171,6 +172,7 @@
 
 .chart-stat {
     @extend .col-md-12;
+    @extend .col-xs-12;
 
     &.oppose {
         text-align: right;
@@ -480,5 +482,16 @@ $fallback-height: 350px;
         @extend .small-caps;
         color: $blue;
         margin-right: 10px;
+    }
+}
+
+@media only screen and (max-width: $screen-sm-min) {
+    .single-doc {
+        .support-oppose-buttons {
+            float: none;
+        }
+        .stats {
+            padding-top: $padding-base-vertical;
+        }
     }
 }
